Skip html5 validation because of native browser-styling: https://bugzilla.mozilla.org/show_bug.cgi?id=1399046

--- a/code/manifest.json
+++ b/code/manifest.json
@@ -6,7 +6,8 @@
     },
     "browser_action": {
         "default_icon": "images/icon-locked-128.png",
-        "default_popup": "html/popup.html"
+        "default_popup": "html/popup.html",
+        "browser_style": false
     },
     "background": {
         "scripts": [
@@ -33,7 +34,8 @@
     "content_security_policy": "script-src 'self'; object-src 'self'",
     "options_ui": {
         "page": "html/options.html",
-        "chrome_style": false
+        "chrome_style": false,
+        "browser_style": false
     },
     "applications": {
       "gecko": {
