--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "jquery": "^3.3.1",
     "openpgp": "^2.5.11",
     "otplib": "^9.0.0",
-    "parse-domain": "^2.0.0",
+    "parse-domain": "2.0.0",
     "popper.js": "^1.14.3"
   },
   "devDependencies": {
     "browserify": "^16.2.0",
+    "browserify-package-json": "^1.0.1",
     "grunt": "^1.0.1",
     "grunt-browserify": "^5.2.0",
     "grunt-contrib-clean": "^1.1.0",
